# OOP-Project

./: Battle.cpp  Battle.h  CMakeLists.txt  Pokemon.cpp  Pokemon.h  README.md  Trainer.cpp  Trainer.h  main.cpp
